--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "@types/mapbox-gl": "^3.4.1",
     "mapbox-gl": "^3.11.0",
     "next": "15.3.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox__mapbox-sdk": "^0.16.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
