--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@mapbox/mapbox-sdk": "^0.16.1",
     "@types/mapbox-gl": "^3.4.1",
     "mapbox-gl": "^3.11.0",
