--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
+    "@mapbox/mapbox-sdk": "^0.16.1",
     "@types/mapbox-gl": "^3.4.1",
     "mapbox-gl": "^3.11.0",
     "next": "15.3.1",
