add fire spread logic and api route

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mapbox/mapbox-sdk": "^0.16.1",
     "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.0",
+    "@turf/turf": "^7.2.0",
     "@types/mapbox-gl": "^3.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
